--- a/.github/workflows/uptime.yml
+++ b/.github/workflows/uptime.yml
@@ -17,7 +17,7 @@
 name: Uptime CI
 on:
   schedule:
-    - cron: "*/5 * * * *"
+    - cron: "*/5 * * * *" # The shortest interval you can run scheduled workflows is once every 5 minutes.
   repository_dispatch:
     types: [uptime]
   workflow_dispatch:
