--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -12,7 +12,9 @@ status-website:
   cname: status.dev.ztw.splashtop.com
   # baseUrl: /ssw-status
   logoUrl: https://raw.githubusercontent.com/jundayou/ssw-status/master/static/logo-shield-black.png
+  favicon: https://raw.githubusercontent.com/jundayou/ssw-status/master/static/logo-shield-black.png
   name: SSW Status
+  robotsText: "User-agent: * \n Disallow: /"
   introTitle: "**Splashtop Secure Workspace Status**"
   introMessage:
   navbar:
