--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -1,6 +1,6 @@
 # Change these first
-owner: Splashtop # Your GitHub organization or username, where this repository lives
-repo: Splashtop # The name of this repository
+owner: jundayou # Your GitHub organization or username, where this repository lives
+repo: ssw-status # The name of this repository
 
 sites:
   - name: Google
