--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -14,7 +14,7 @@ status-website:
   logoUrl: https://raw.githubusercontent.com/jundayou/ssw-status/master/static/logo-shield-black.png
   favicon: https://raw.githubusercontent.com/jundayou/ssw-status/master/static/logo-shield-black.png
   name: SSW Status
-  robotsText: "User-agent: * \n Disallow: /"
+  # robotsText: "User-agent: * \n Disallow: /"
   introTitle: "**Splashtop Secure Workspace Status**"
   introMessage:
   navbar:
