--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -1,6 +1,6 @@
 # Change these first
-owner: upptime # Your GitHub organization or username, where this repository lives
-repo: upptime # The name of this repository
+owner: Splashtop # Your GitHub organization or username, where this repository lives
+repo: Splashtop # The name of this repository
 
 sites:
   - name: Google
@@ -22,6 +22,7 @@ status-website:
       href: /
     # - title: GitHub
     #   href: https://github.com/$OWNER/$REPO
-
+i18n:
+  footer: Powered by [Splashtop](https://www.splashtop.com)
 # Upptime also supports notifications, assigning issues, and more
 # See https://upptime.js.org/docs/configuration
