--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -11,9 +11,9 @@ status-website:
   # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
   cname: status.dev.ztw.splashtop.com
   # baseUrl: /ssw-status
-  logoUrl: https://spt.us.ssw.splashtop.com/img/favicon-logo.svg
+  logoUrl: https://us.ssw.splashtop.com/img/favicon-logo.svg
   # favicon: https://raw.githubusercontent.com/jundayou/ssw-status/master/static/logo-shield-black.png
-  faviconSvg: https://spt.us.ssw.splashtop.com/img/favicon-logo.svg
+  faviconSvg: https://us.ssw.splashtop.com/img/favicon-logo.svg
   name: SSW Status
   # robotsText: "User-agent: * \n Disallow: /"
   introTitle: "**Splashtop Secure Workspace Status**"
