--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -3,8 +3,14 @@ owner: jundayou # Your GitHub organization or username, where this repository li
 repo: ssw-status # The name of this repository
 
 sites:
-  - name: Google
-    url: https://www.google.com
+  - name: Portal (US)
+    url: https://us.ssw.splashtop.com/
+    method: GET
+    icon: https://us.ssw.splashtop.com/img/favicon-logo.svg
+  - name: Secret Manager (US)
+    url: $US_SECRET_MANAGER_URL
+    method: GET
+    icon: https://us.ssw.splashtop.com/img/favicon-logo.svg
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
