--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -3,12 +3,49 @@ owner: jundayou # Your GitHub organization or username, where this repository li
 repo: ssw-status # The name of this repository
 
 sites:
-  - name: Portal (US)
+  - name: SSW Portal (US)
     url: https://us.ssw.splashtop.com/
     method: GET
     icon: https://us.ssw.splashtop.com/img/favicon-logo.svg
   - name: Secret Manager (US)
     url: $US_SECRET_MANAGER_URL
+    method: GET
+    icon: https://us.ssw.splashtop.com/img/favicon-logo.svg
+  - name: Controller (US)
+    url: $US_CONTROLLER_URL #
+    method: GET
+    icon: https://us.ssw.splashtop.com/img/favicon-logo.svg
+  - name: Controller L4 (US)
+    url: $US_CONTROLLER_L4_URL # 
+    check: "tcp-ping"
+    port: 9201
+    icon: https://us.ssw.splashtop.com/img/favicon-logo.svg
+  - name: [Edge] Ashburn, VA, US
+    url: $E1_ASHBURN_CTRL_USW2 # 
+    method: GET
+    icon: https://us.ssw.splashtop.com/img/favicon-logo.svg
+  - name: [Edge] Portland, OR, US
+    url: $E1_PORTLAND_CTRL_USW2 # 
+    method: GET
+    icon: https://us.ssw.splashtop.com/img/favicon-logo.svg
+  - name: [Edge] Frankfurt, Germany
+    url: $E1_FRANKFURT_CTRL_USW2 # 
+    method: GET
+    icon: https://us.ssw.splashtop.com/img/favicon-logo.svg
+  - name: [Edge] Taipei, TW
+    url: $E1_TAIPEI_CTRL_USW2 # 
+    method: GET
+    icon: https://us.ssw.splashtop.com/img/favicon-logo.svg
+  - name: [Edge] HongKong, China
+    url: $E1_HONGKONG_CTRL_USW2 # 
+    method: GET
+    icon: https://us.ssw.splashtop.com/img/favicon-logo.svg
+  - name: [Edge] London, England
+    url: $E1_LONDON_CTRL_USW2 # 
+    method: GET
+    icon: https://us.ssw.splashtop.com/img/favicon-logo.svg
+  - name: [Edge] Tokyo, Japan
+    url: $E1_TOKYO_CTRL_USW2 # 
     method: GET
     icon: https://us.ssw.splashtop.com/img/favicon-logo.svg
 
