--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -52,13 +52,13 @@ sites:
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
   # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
-  cname: status.dev.ztw.splashtop.com
+  cname: status.ssw.splashtop.com
   # baseUrl: /ssw-status
   logoUrl: https://us.ssw.splashtop.com/img/favicon-logo.svg
   # favicon: https://raw.githubusercontent.com/jundayou/ssw-status/master/static/logo-shield-black.png
   faviconSvg: https://us.ssw.splashtop.com/img/favicon-logo.svg
   name: SSW Status
-  # robotsText: "User-agent: * \n Disallow: /"
+  robotsText: "User-agent: * \n Disallow: /"
   introTitle: "**Splashtop Secure Workspace Status**"
   introMessage:
   navbar:
