--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -7,47 +7,58 @@ sites:
     url: https://us.ssw.splashtop.com/
     method: GET
     icon: https://us.ssw.splashtop.com/img/favicon-logo.svg
+    showAverageResponseTime: false
   - name: Secret Manager (US)
     url: $US_SECRET_MANAGER_URL
     method: GET
     icon: https://us.ssw.splashtop.com/img/favicon-logo.svg
+    showAverageResponseTime: false
   - name: Controller (US)
     url: $US_CONTROLLER_URL #
     method: GET
     icon: https://us.ssw.splashtop.com/img/favicon-logo.svg
+    showAverageResponseTime: false
   - name: Controller L4 (US)
     url: $US_CONTROLLER_L4_URL # 
     check: "tcp-ping"
     port: 9201
     icon: https://us.ssw.splashtop.com/img/favicon-logo.svg
+    showAverageResponseTime: false
   - name: '[Edge] Ashburn, VA, US'
     url: $E1_ASHBURN_CTRL_USW2 # 
     method: GET
     icon: https://reg.ssw.splashtop.com/static/media/us.912cb4a8f30b24032f0d.svg
+    showAverageResponseTime: false
   - name: '[Edge] Portland, OR, US'
     url: $E1_PORTLAND_CTRL_USW2 # 
     method: GET
     icon: https://reg.ssw.splashtop.com/static/media/us.912cb4a8f30b24032f0d.svg
+    showAverageResponseTime: false
   - name: '[Edge] Frankfurt, Germany'
     url: $E1_FRANKFURT_CTRL_USW2 # 
     method: GET
     icon: https://reg.ssw.splashtop.com/static/media/de.adc6c9b3594fb2f4a4df.svg
+    showAverageResponseTime: false
   - name: '[Edge] Taipei, TW'
     url: $E1_TAIPEI_CTRL_USW2 # 
     method: GET
     icon: https://reg.ssw.splashtop.com/static/media/tw.39308d8769d9190bd1aa.svg
+    showAverageResponseTime: false
   - name: '[Edge] HongKong, China'
     url: $E1_HONGKONG_CTRL_USW2 # 
     method: GET
     icon: https://reg.ssw.splashtop.com/static/media/hk.b80f4f843c33522190c6.svg
+    showAverageResponseTime: false
   - name: '[Edge] London, England'
     url: $E1_LONDON_CTRL_USW2 # 
     method: GET
     icon: https://reg.ssw.splashtop.com/static/media/gb.84d4bb24d2a1a5891e0d.svg
+    showAverageResponseTime: false
   - name: '[Edge] Tokyo, Japan'
     url: $E1_TOKYO_CTRL_USW2 # 
     method: GET
     icon: https://reg.ssw.splashtop.com/static/media/jp.5d4d1d1eeb3d4c9ca374.svg
+    showAverageResponseTime: false
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
